--- a/style.css
+++ b/style.css
@@ -103,5 +103,45 @@ body {
     right: 30px;
     bottom: 30px;
     border-radius: 50%;
-    background: linear-gradient(rgba(0,0,0,0.2) 25%, transparent, transparent );
+    background: radial-gradient(rgba(0,0,0,0.2) 25%, transparent, transparent );
+}
+
+.vapour {
+    position: relative;
+    display: flex;
+    z-index: 99;
+    padding: 0 20px;
+}
+
+.vapour span {
+    position: relative;
+    bottom: 50px;
+    display: block;
+    margin: 0 2px 50px;
+    height: 120px;
+    background: #fff;
+    border-radius: 50%;
+    animation: animate 5s linear infinite;
+    opacity: 0;
+    filter: blur(8px);
+    animation-delay: calc(var(--i) * -0.5s);
+}
+
+@keyframes animate {
+    0% {
+        transform: translateY(0) translateX(1);
+        opacity: 0;
+    }
+    15% {
+        opacity: 1;
+    }
+    50% {
+        transform: translateY(-150px) translateX(5);
+    }
+    95% {
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(-300px) translateX(10);
+    }
 }
