--- a/style.css
+++ b/style.css
@@ -1,147 +1,119 @@
-* {
-    margin: 0;
-    padding: 0;
+html {
     box-sizing: border-box;
+    --bgColorMenu : #1d1d27;
+    --duration: .7s;    
 }
 
-body {
+html *,
+html *::before,
+html *::after {
+    box-sizing: inherit;
+}
 
+body{
+    margin: 0;
     display: flex;
+    height: 100vh;
+    overflow: hidden;
     align-items: center;
     justify-content: center;
-    min-height: 100vh;
-    background: #067d8b;
+    background-color: #ffb457;
+    -webkit-tap-highlight-color: transparent;
+    transition: background-color var(--duration);
 }
 
-.container {
-    position: relative;
-    top: 50px;
-}
-
-.cup {
-    position: relative;
-    width: 280px;
-    height: 300px;
-    background: linear-gradient(to right, #f9f9f9, #d9d9d9);
-    border-bottom-left-radius: 45%;
-    border-bottom-right-radius: 45%;
-}
-
-.top {
-    position: absolute;
-    top: -30px;
-    left: 0;
-    width: 100%;
-    height: 60px;
-    background: linear-gradient(to right, #f9f9f9, #d9d9d9);
-    border-radius: 50%;
-}
-
-.circle {
-    position: absolute;
-    top: 5px;
-    left: 10px;
-    width: calc(100% - 20px);
-    height: 50px;
-    background: linear-gradient(to left, #f9f9f9, #d9d9d9);
-    border-radius: 50%;
-    box-sizing: border-box;
-    overflow: hidden;
-}
-
-.tea {
-    position: absolute;
-    top: 20px;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(#c57e65, #e28462);
-    border-radius: 50%;
-}
-
-.handle {
-    position: absolute;
-    right: -70px;
-    top: 40px;
-    width: 160px;
-    height: 180px;
-    border: 25px solid #dcdcdc;
-    border-left: 25px solid transparent;
-    border-bottom: 25px solid transparent;
-    border-radius: 50%;
-    transform: rotate(42deg);
-}
-
-.plate {
-    position: absolute;
-    bottom: -50px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 500px;
-    height: 200px;
-    background: linear-gradient(to right, #f9f9f9, #e7e7e7);
-    border-radius: 50%;
-    box-shadow: 0 35px 35px rgba(0, 0, 0, 0.2);
-}
-
-.place::before {
-    content: '';
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    right: 10px;
-    bottom: 10px;
-    border-radius: 50%;
-    background: linear-gradient(to left, #f9f9f9, #e7e7e7);
-}
-
-.place::after {
-    content: '';
-    position: absolute;
-    top: 30px;
-    left: 30px;
-    right: 30px;
-    bottom: 30px;
-    border-radius: 50%;
-    background: radial-gradient(rgba(0,0,0,0.2) 25%, transparent, transparent );
-}
-
-.vapour {
-    position: relative;
+.menu{
+    margin: 0;
     display: flex;
-    z-index: 99;
-    padding: 0 20px;
-}
-
-.vapour span {
+    /* Works well with 100% width  */
+    width: 32.05em;
+    font-size: 1.5em;
+    padding: 0 2.85em;
     position: relative;
-    bottom: 50px;
-    display: block;
-    margin: 0 2px 50px;
-    height: 120px;
-    background: #fff;
-    border-radius: 50%;
-    animation: animate 5s linear infinite;
-    opacity: 0;
-    filter: blur(8px);
-    animation-delay: calc(var(--i) * -0.5s);
+    align-items: center;
+    justify-content: center;
+    background-color: var(--bgColorMenu);
 }
 
-@keyframes animate {
-    0% {
-        transform: translateY(0) translateX(1);
-        opacity: 0;
-    }
-    15% {
-        opacity: 1;
-    }
-    50% {
-        transform: translateY(-150px) translateX(5);
-    }
-    95% {
-        opacity: 0;
-    }
+.menu__item{
+    all: unset;
+    flex-grow: 1;
+    z-index: 100;
+    display: flex;
+    cursor: pointer;
+    position: relative;
+    border-radius: 50%;
+    align-items: center;
+    will-change: transform;
+    justify-content: center;
+    padding: 0.55em 0 0.85em;
+    transition: transform var(--timeOut , var(--duration));
+}
+
+.menu__item::before{
+    content: "";
+    z-index: -1;
+    width: 4.2em;
+    height: 4.2em;
+    border-radius: 50%;
+    position: absolute;
+    transform: scale(0);
+    transition: background-color var(--duration), transform var(--duration);
+}
+
+
+.menu__item.active {
+    transform: translate3d(0, -.8em , 0);
+}
+
+.menu__item.active::before{
+    transform: scale(1);
+    background-color: var(--bgColorItem);
+}
+
+.icon{
+    width: 2.6em;
+    height: 2.6em;
+    stroke: white;
+    fill: transparent;
+    stroke-width: 1pt;
+    stroke-miterlimit: 10;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+    stroke-dasharray: 400;
+}
+
+.menu__item.active .icon {
+    animation: strok 1.5s reverse;
+}
+
+@keyframes strok {
     100% {
-        transform: translateY(-300px) translateX(10);
+        stroke-dashoffset: 400;
+    }
+
+}
+
+.menu__border{
+    left: 0;
+    bottom: 99%;
+    width: 10.9em;
+    height: 2.4em;
+    position: absolute;
+    clip-path: url(#menu);
+    will-change: transform;
+    background-color: var(--bgColorMenu);
+    transition: transform var(--timeOut , var(--duration));
+}
+
+.svg-container {
+    width: 0;
+    height: 0;
+}
+
+
+@media screen and (max-width: 50em) {
+    .menu{
+        font-size: .8em;
     }
 }
