--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css?family=Oswald:400,700');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;600;700&display=swap');
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 body {
@@ -12,76 +12,56 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: #434750;
+    background: #333;
 }
 
 ul {
     position: relative;
-    transform: skewY(-15deg);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 ul li {
-    position: relative;
     list-style: none;
-    width: 200px;
-    background: #3e3f46;
-    padding: 15px;
-    z-index: var(--i);
-    transition: 0.5s;
-}
-
-ul li:hover {
-    background: #33a3ee;
-    transform: translateX(-50px);
-}
-
-ul li::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: -40px;
-    width: 40px;
-    height: 100%;
-    background: #2e3133;
-    transform-origin: right;
-    transform: skewY(45deg);
-    transition: 0.5s;
-}
-
-ul li:hover::before {
-    background: #1f5378;
-}
-
-ul li::after {
-    content: '';
-    position: absolute;
-    top: -40px;
-    left: 0;
-    height: 40px;
-    width: 100%;
-    background: #35383e;
-    transform-origin: bottom;
-    transform: skewX(45deg);
-    transition: 0.5s;
-}
-
-ul li:hover::after {
-    background: #2982b9;
 }
 
 ul li a {
-    text-decoration: none;
-    color: #999;
-    display: block;
-    text-transform: uppercase;
-    letter-spacing: 0.05em;
-    transition: 0.5s;
-}
-
-ul li:hover a {
+    position: relative;
+    font-size: 2em;
     color: #fff;
+    text-decoration: none;
+    margin: 10px 0;
+    display: inline-block;
 }
 
-ul li:last-child::after {
-    box-shadow: -120px 120px 20px rgba(0, 0, 0, 0.25);
+#marker {
+    position: absolute;
+    top: 0;
+    margin-top: -5px;
+    height: 50px;
+    transition: 0.5s;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
+
+#marker::before {
+    content: '';
+    width: 15px;
+    height: 15px;
+    border-right: 4px solid #30a3ff;
+    border-top: 4px solid #30a3ff;
+    transform: rotate(45deg) translate(-20px, 20px);
+}
+
+#marker::after {
+    content: '';
+    width: 15px;
+    height: 15px;
+    border-right: 4px solid #30a3ff;
+    border-top: 4px solid #30a3ff;
+    transform: rotate(225deg) translate(-20px, 20px);
+}
+
