--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 
 .wavy {
     position: relative;
-    -webkit-box-reflect: below -12px linear-gradient(transparent, rgba(0,0,0,0.2));
+    -webkit-box-reflect: below -12px linear-gradient(transparent, rgba(0,0,0,0.2)); /* This effect not work on Firefox */
 }
 
 .wavy span {
